--- a/Index.html
+++ b/Index.html
@@ -1,66 +1,95 @@
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
+    <title>Portafolio de [Tu Nombre]</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <img src="ruta-de-tu-imagen.jpg" alt="Foto de Perfil" class="profile-image">
-            <div>
-                <h1>Nombre del Desarrollador</h1>
-                <p>Titulado de Informática en DuocUC</p>
-                <p>Datos personales: ejemplo@correo.com | +569 1234 5678</p>
-            </div>
+        <div class="container">
+            <h1>[Tu Nombre]</h1>
+            <p>Desarrollador de Software</p>
+            <nav>
+                <ul>
+                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#habilidades">Habilidades</a></li>
+                    <li><a href="#experiencia">Experiencia</a></li>
+                    <li><a href="#proyectos">Proyectos</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <section id="meta-personal">
-        <h2>Meta Personal</h2>
-        <p>Mi meta es convertirme en un desarrollador full-stack experto en tecnologías modernas y contribuir en proyectos innovadores que impacten positivamente en las personas.</p>
-    </section>
+    <main>
+        <section id="contacto" class="contacto-section">
+            <div class="container">
+                <h2>Contacto</h2>
+                <p><i class="fas fa-envelope"></i> Correo: [tuemail@example.com]</p>
+                <p><i class="fas fa-phone"></i> Teléfono: [+56 9 1234 5678]</p>
+                <p><i class="fab fa-linkedin"></i> LinkedIn: [Enlace a tu perfil]</p>
+            </div>
+        </section>
 
-    <section id="descripcion">
-        <h2>Descripción</h2>
-        <p>Soy un desarrollador proactivo y orientado a resultados, con habilidades intermedias en Java y Oracle, y conocimientos básicos en JavaScript, SQL Server, Angular, Spring Boot y PHP. Tengo una sólida capacidad para trabajar en equipo y resolver problemas de manera eficiente.</p>
-    </section>
+        <section id="habilidades" class="habilidades-section">
+            <div class="container">
+                <h2>Habilidades</h2>
+                <div class="habilidades">
+                    <h3>Habilidades Técnicas</h3>
+                    <ul>
+                        <li>Java</li>
+                        <li>Oracle</li>
+                        <li>JavaScript</li>
+                        <li>SQL Server</li>
+                        <li>Angular</li>
+                        <li>Spring Boot</li>
+                        <li>PHP</li>
+                    </ul>
+                </div>
+                <div class="habilidades">
+                    <h3>Habilidades Blandas</h3>
+                    <ul>
+                        <li>Comunicación</li>
+                        <li>Trabajo en equipo</li>
+                        <li>Resolución de problemas</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-    <section id="habilidades-blandas">
-        <h2>Habilidades Blandas</h2>
-        <ul>
-            <li>Comunicación efectiva</li>
-            <li>Trabajo en equipo</li>
-            <li>Adaptabilidad</li>
-            <li>Resolución de problemas</li>
-            <li>Gestión del tiempo</li>
-        </ul>
-    </section>
+        <section id="experiencia" class="experiencia-section">
+            <div class="container">
+                <h2>Experiencia Laboral</h2>
+                <div class="experiencia-item">
+                    <h3>Nombre de la Empresa</h3>
+                    <p><strong>Rol:</strong> Desarrollador</p>
+                    <p><strong>Fecha:</strong> [Mes/Año - Mes/Año]</p>
+                    <p>[Breve descripción de las responsabilidades y logros]</p>
+                </div>
+            </div>
+        </section>
 
-    <section id="experiencia-laboral">
-        <h2>Experiencia Laboral</h2>
-        <ul>
-            <li>Empresa ABC (2020 - 2022) - Desarrollador Backend</li>
-            <li>Empresa XYZ (2019 - 2020) - Soporte Técnico</li>
-        </ul>
-    </section>
-
-    <section id="skills">
-        <h2>Skills (Lenguajes Aprendidos)</h2>
-        <ul>
-            <li>Java</li>
-            <li>JavaScript</li>
-            <li>Oracle SQL</li>
-            <li>SQL Server</li>
-            <li>Angular</li>
-            <li>Spring Boot</li>
-            <li>PHP</li>
-        </ul>
-    </section>
+        <section id="proyectos" class="proyectos-section">
+            <div class="container">
+                <h2>Proyectos Anteriores</h2>
+                <div class="proyecto-item">
+                    <h3>Nombre del Proyecto</h3>
+                    <p>[Descripción breve del proyecto]</p>
+                    <a href="#" class="btn">Ver más</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>© 2024 Nombre del Desarrollador. Todos los derechos reservados.</p>
+        <div class="container">
+            <p>© 2024 [Tu Nombre]. Todos los derechos reservados.</p>
+        </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
