--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio de [Tu Nombre]</title>
+    <title>Portafolio de Jorge Fernandez</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -76,7 +76,7 @@
             <div class="container">
                 <h2>Proyectos Anteriores</h2>
                 <div class="proyecto-item">
-                    <h3>Nombre del Proyecto</h3>
+                    <h3>Proyecto Finterra</h3>
                     <p>[Descripción breve del proyecto]</p>
                     <a href="#" class="btn">Ver más</a>
                 </div>
