--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>[Tu Nombre]</h1>
-            <p>Desarrollador de Software</p>
+            <h1>Jorge Fernandez</h1>
+            <p>Desarrollador de Software Titulado</p>
             <nav>
                 <ul>
                     <li><a href="#contacto">Contacto</a></li>
@@ -28,12 +28,20 @@
         <section id="contacto" class="contacto-section">
             <div class="container">
                 <h2>Contacto</h2>
-                <p><i class="fas fa-envelope"></i> Correo: [tuemail@example.com]</p>
-                <p><i class="fas fa-phone"></i> Teléfono: [+56 9 1234 5678]</p>
-                <p><i class="fab fa-linkedin"></i> LinkedIn: [Enlace a tu perfil]</p>
+                <p><i class="fas fa-envelope"></i> Correo: jor.fernandezj@duocuc.cl</p>
+                <p><i class="fas fa-phone"></i> Teléfono: +56 9 6752 9052 </p>
+                <p><i class="fab fa-linkedin"></i> LinkedIn: linkedin.com/in/jorge-fernandez-5b8042246/</p>
             </div>
         </section>
 
+        <section id="mas" class="contacto-section">
+            <div class="container">
+                <h2>Mas de Mi</h2>
+                <p> Busco contribuir en un entorno dinámico donde pueda aplicar mis habilidades técnicas y continuar desarrollando mis competencias. Mi pasión por la programación y el desarrollo de soluciones eficientes me impulsa a buscar siempre la mejora continua.
+Puedes ver mis proyectos y contribuciones en mi perfil de GitHub: https://github.com/jorge1101.
+</p>
+            </div>
+        </section>
         <section id="habilidades" class="habilidades-section">
             <div class="container">
                 <h2>Habilidades</h2>
@@ -55,6 +63,9 @@
                         <li>Comunicación</li>
                         <li>Trabajo en equipo</li>
                         <li>Resolución de problemas</li>
+                        <li>Trabajo bajo presion</li>
+                        <li>Proactivo</li>
+                        <li>Resolucion de Errores</li>
                     </ul>
                 </div>
             </div>
@@ -64,10 +75,10 @@
             <div class="container">
                 <h2>Experiencia Laboral</h2>
                 <div class="experiencia-item">
-                    <h3>Nombre de la Empresa</h3>
-                    <p><strong>Rol:</strong> Desarrollador</p>
-                    <p><strong>Fecha:</strong> [Mes/Año - Mes/Año]</p>
-                    <p>[Breve descripción de las responsabilidades y logros]</p>
+                    <h3>Finterra</h3>
+                    <p><strong>Rol:</strong> Desarrollador TI</p>
+                    <p><strong>Fecha:</strong> 01/10/2023</p>
+                    <p>Desarrollé análisis y planes de acción, trabajé como desarrollador full stack utilizando Angular y Spring Boot, gestioné la colaboración en equipo mediante GitHub, optimicé y actualicé código obsoleto, y administré servidores Linux directamente. </p>
                 </div>
             </div>
         </section>
@@ -77,8 +88,8 @@
                 <h2>Proyectos Anteriores</h2>
                 <div class="proyecto-item">
                     <h3>Proyecto Finterra</h3>
-                    <p>[Descripción breve del proyecto]</p>
-                    <a href="#" class="btn">Ver más</a>
+                    <p>Proyecto de renovacion de codigo de pagina y creacion de una seccion para clientes</p>
+                    <a href="https://github.com/jorge1101/ContactAgreement" class="btn">Ver más</a>
                 </div>
             </div>
         </section>
@@ -86,7 +97,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 [Tu Nombre]. Todos los derechos reservados.</p>
+            <p>© 2024 Todos los derechos reservados.</p>
         </div>
     </footer>
 
