--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="fl_left">
       <ul class="nospace">
-        <li><i class="fas fa-mobile-alt rgtspace-5"></i> +00 (123) 456 7890</li>
-        <li><i class="far fa-envelope rgtspace-5"></i> info@domain.com</li>
+        <li></i> Jorge Fernandez</li>
+        <li></i> Ingeniero informatico Titulado</li>
       </ul>
     </div>
     <div class="fl_right">
@@ -47,16 +47,13 @@
 
     <ul class="nospace clear">
       <li class="one_quarter first">
-        <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Give us a call:</strong> +00 (123) 456 7890</span></div>
+        <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Numero:</strong> +56 9 6752 9052</span></div>
       </li>
       <li class="one_quarter">
-        <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> support@domain.com</span></div>
+        <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Correo:</strong> Jor.Fernandezj@duocuc.cl</span></div>
       </li>
       <li class="one_quarter">
-        <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.:</strong> 08.00am - 18.00pm</span></div>
-      </li>
-      <li class="one_quarter">
-        <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="#">our location</a></span></div>
+        <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong> Direccion:</strong> El Casco 4829 Peñalolen</span></div>
       </li>
     </ul>
 
@@ -68,42 +65,10 @@
   <header id="header" class="hoc clear">
     <div id="logo" class="fl_left"> 
 
-      <h1><a href="index.html">Spourmo</a></h1>
+      <h1><a href="index.html"></a></h1>
    
     </div>
-    <nav id="mainav" class="fl_right"> 
 
-      <ul class="clear">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a class="drop" href="#">Pages</a>
-          <ul>
-            <li><a href="pages/gallery.html">Gallery</a></li>
-            <li><a href="pages/full-width.html">Full Width</a></li>
-            <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-            <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-            <li><a href="pages/basic-grid.html">Basic Grid</a></li>
-            <li><a href="pages/font-icons.html">Font Icons</a></li>
-          </ul>
-        </li>
-        <li><a class="drop" href="#">Dropdown</a>
-          <ul>
-            <li><a href="#">Level 2</a></li>
-            <li><a class="drop" href="#">Level 2 + Drop</a>
-              <ul>
-                <li><a href="#">Level 3</a></li>
-                <li><a href="#">Level 3</a></li>
-                <li><a href="#">Level 3</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Level 2</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-      </ul>
-
-    </nav>
   </header>
 
   <div id="pageintro" class="hoc clear"> 
