--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div id="pageintro" class="hoc clear"> 
 
-    <article>
+    <article class="hoc clear>
       <h3 class="heading">Jorge Fernandez</h3>
       <p>Titulado de DuocUC de Ingenieria Informatica dominando las siguientes habilidades</p>
       <footer>
@@ -123,7 +123,6 @@
 
     <div class="sectiontitle">
       <p class="nospace font-xs">Mis Proyectos</p>
-      <h6 class="heading">Ut ipsum vivamus tincidunt</h6>
     </div>
     <figure>
       <figcaption class="center btmspace-50"><a href="#">Pharetra</a> / <a href="#">Imperdiet</a> / <a href="#">Suspendisse</a> / <a href="#">Potenti</a></figcaption>
