--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
   </header>
 
-  <div id="pageintro" class="hoc clear"> 
+  <div id="pageintro" > 
 
-    <article class="hoc clear>
+    <article>
       <h3 class="heading">Jorge Fernandez</h3>
       <p>Titulado de DuocUC de Ingenieria Informatica dominando las siguientes habilidades</p>
       <footer>
