--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   </header>
 
-  <div id="pageintro" > 
+  <div id="pageintro" class="hoc clear"> 
 
     <article>
       <h3 class="heading">Jorge Fernandez</h3>
@@ -51,11 +51,6 @@
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">Angular</a></li>
           <li><a class="btn inverse" href="#">Java</a></li>
-          <li><a class="btn inverse" href="#">JavaScript</a></li>
-          <li><a class="btn inverse" href="#">PhP</a></li>
-          <li><a class="btn inverse" href="#">Oracle</a></li>
-          <li><a class="btn inverse" href="#">Db Mongo</a></li>
-          <li><a class="btn inverse" href="#">Springboot</a></li>
         </ul>
       </footer>
     </article>
