--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section id="services" class="hoc container clear"> 
 
     <div class="sectiontitle">
-      <p class="nospace font-xs">Habilidades blandas</p>
+      <h2 class="nospace font-xs">Habilidades blandas</h2>
     </div>
     <ul class="nospace group grid-3">
       <li class="one_third">
