--- a/index.html
+++ b/index.html
@@ -44,16 +44,17 @@
 
   <div id="pageintro" class="hoc clear"> 
 
-    <article>
-      <h3 class="heading">Jorge Fernandez</h3>
-      <p>Titulado de DuocUC de Ingenieria Informatica dominando las siguientes habilidades</p>
+<article>
+      <h3 class="heading">Senectus et netus</h3>
+      <p>Et malesuada fames ac turpis egestas duis rutrum eros ut sapien in hac habitasse platea dictumst aliquam venenatis leo et orci ut pretium odio eu nisi nulla at.</p>
       <footer>
         <ul class="nospace inline pushright">
-          <li><a class="btn" href="#">Angular</a></li>
-          <li><a class="btn inverse" href="#">Java</a></li>
+          <li><a class="btn" href="#">Egestas</a></li>
+          <li><a class="btn inverse" href="#">Tristique</a></li>
         </ul>
       </footer>
     </article>
+
   </div>
   
 </div>
@@ -67,42 +68,42 @@
     </div>
     <ul class="nospace group grid-3">
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-chess-king"></i></a>
+        <article><a href="#"><i class=""></i></a>
           <h6 class="heading">Trabajo en equipo</h6>
           <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
           <footer><a href="#">Read More</a></footer>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-archive"></i></a>
+        <article><a href="#"><i class=""></i></a>
           <h6 class="heading">Proactividad</h6>
           <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
           <footer><a href="#">Read More</a></footer>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-backspace"></i></a>
+        <article><a href="#"><i class=""></i></a>
           <h6 class="heading">Resolución de problemas</h6>
           <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
           <footer><a href="#">Read More</a></footer>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-bezier-curve"></i></a>
+        <article><a href="#"><i class=""></i></a>
           <h6 class="heading">Capacidad Analitica</h6>
           <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
           <footer><a href="#">Read More</a></footer>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-box-open"></i></a>
+        <article><a href="#"><i class=""></i></a>
           <h6 class="heading">Aprendizaje Rapido</h6>
           <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
           <footer><a href="#">Read More</a></footer>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-luggage-cart"></i></a>
+        <article><a href="#"><i class="></i></a>
           <h6 class="heading">Trabajo bajo presión</h6>
           <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
           <footer><a href="#">Read More</a></footer>
