--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
+<!DOCTYPE html>
+
 <html lang="">
 
 <head>
-  <title>Portafolio</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<title>Portafolio</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
-
 <body id="top">
 
-  <div class="wrapper row0">
-    <div id="topbar" class="hoc clear">
+<div class="wrapper row0">
+  <div id="topbar" class="hoc clear"> 
 
-      <div class="fl_left">
-        <ul class="nospace">
-          <li></li> <!-- Puedes agregar contenido aquí o eliminar -->
-          <li></li> <!-- Puedes agregar contenido aquí o eliminar -->
-        </ul>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="wrapper row1">
-    <section id="ctdetails" class="hoc clear">
-
-      <ul class="nospace clear">
-        <li class="one_quarter first">
-          <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Número:</strong> +56 9 6752 9052</span></div>
-        </li>
-        <li class="one_quarter">
-          <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Correo:</strong> Jor.Fernandezj@duocuc.cl</span></div>
-        </li>
-        <li class="one_quarter">
-          <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Dirección:</strong> El Casco 4829 Peñalolen</span></div>
-        </li>
+    <div class="fl_left">
+      <ul class="nospace">
+        <li></i> </li>
+        <li></i> </li>
       </ul>
+    </div>
+  
+  </div>
+</div>
 
-    </section>
-    <!-- Cerrar la etiqueta <header> es innecesario aquí -->
-  </div> <!-- Cierre correcto del div de la wrapper row1 -->
+<div class="wrapper row1">
+  <section id="ctdetails" class="hoc clear"> 
 
-  <div id="pageintro" class="hoc clear">
+    <ul class="nospace clear">
+      <li class="one_quarter first">
+        <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Numero:</strong> +56 9 6752 9052</span></div>
+      </li>
+      <li class="one_quarter">
+        <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Correo:</strong> Jor.Fernandezj@duocuc.cl</span></div>
+      </li>
+      <li class="one_quarter">
+        <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong> Direccion:</strong> El Casco 4829 Peñalolen</span></div>
+      </li>
+    </ul>
+
+  </section>
+
+  </header>
+
+  <div id="pageintro" class="hoc clear"> 
 
     <article>
       <h3 class="heading">Jorge Fernandez</h3>
-      <p>Titulado de DuocUC de Ingeniería Informática dominando las siguientes habilidades</p>
+      <p>Titulado de DuocUC de Ingenieria Informatica dominando las siguientes habilidades</p>
       <footer>
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">Angular</a></li>
@@ -59,8 +60,103 @@
       </footer>
     </article>
 
+
   </div>
+  
+</div>
 
+
+<div class="wrapper row3">
+  <section id="services" class="hoc container clear"> 
+
+    <div class="sectiontitle">
+      <h2 class="nospace font-xs">Habilidades blandas</h2>
+    </div>
+    <ul class="nospace group grid-3">
+      <li class="one_third">
+        <article><a href="#"><i class=""></i></a>
+          <h6 class="heading">Trabajo en equipo</h6>
+          <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
+          <footer><a href="#">Read More</a></footer>
+        </article>
+      </li>
+      <li class="one_third">
+        <article><a href="#"><i class=""></i></a>
+          <h6 class="heading">Proactividad</h6>
+          <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
+          <footer><a href="#">Read More</a></footer>
+        </article>
+      </li>
+      <li class="one_third">
+        <article><a href="#"><i class=""></i></a>
+          <h6 class="heading">Resolución de problemas</h6>
+          <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
+          <footer><a href="#">Read More</a></footer>
+        </article>
+      </li>
+      <li class="one_third">
+        <article><a href="#"><i class=""></i></a>
+          <h6 class="heading">Capacidad Analitica</h6>
+          <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
+          <footer><a href="#">Read More</a></footer>
+        </article>
+      </li>
+      <li class="one_third">
+        <article><a href="#"><i class=""></i></a>
+          <h6 class="heading">Aprendizaje Rapido</h6>
+          <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
+          <footer><a href="#">Read More</a></footer>
+        </article>
+      </li>
+      <li class="one_third">
+        <article><a href="#"><i class=""></i></a>
+          <h6 class="heading">Trabajo bajo presión</h6>
+          <p>Tellus lacus tempor in pharetra id imperdiet sit amet enim suspendisse potenti fusce ornare imperdiet sit amet enim suspendisse.</p>
+          <footer><a href="#">Read More</a></footer>
+        </article>
+      </li>
+    </ul>
+  
+  </section>
+</div>
+
+<div class="wrapper row2">
+  <section class="hoc container clear"> 
+
+    <div class="sectiontitle">
+      <p class="nospace font-xs">Mis Proyectos</p>
+    </div>
+    <figure>
+      <figcaption class="center btmspace-50"><a href="#">Pharetra</a> / <a href="#">Imperdiet</a> / <a href="#">Suspendisse</a> / <a href="#">Potenti</a></figcaption>
+      <ul class="nospace group grid-3">
+        <li class="one_third"><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a></li>
+        <li class="one_third"><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a></li>
+        <li class="one_third"><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a></li>
+        <li class="one_third"><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a></li>
+        <li class="one_third"><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a></li>
+        <li class="one_third"><a class="imgover" href="#"><img src="images/demo/348x261.png" alt=""></a></li>
+      </ul>
+    </figure>
+ 
+  </section>
+</div>
+
+
+<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');"> 
+
+  <div class="wrapper row4">
+    <footer id="footer" class="hoc clear"> 
+
+    </footer>
+  </div>
+  
+
+</div>
+
+<a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
+<!-- JAVASCRIPTS -->
+<script src="layout/scripts/jquery.min.js"></script>
+<script src="layout/scripts/jquery.backtotop.js"></script>
+<script src="layout/scripts/jquery.mobilemenu.js"></script>
 </body>
-
 </html>
