--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </header>
 
   <div id="pageintro" class="hoc clear"> 
-
+<div class="bgded overlay padtop" style="background-image:url('images/demo/backgrounds/01.png');"> 
     <article>
       <h3 class="heading">Jorge Fernandez</h3>
       <p>Titulado de DuocUC de Ingenieria Informatica dominando las siguientes habilidades</p>
@@ -60,11 +60,9 @@
       </footer>
     </article>
 </div>
-
- 
   
 </div>
-
+</div>
 
 <div class="wrapper row3">
   <section id="services" class="hoc container clear"> 
