--- a/index.html
+++ b/index.html
@@ -145,6 +145,24 @@
   <div class="wrapper row4">
     <footer id="footer" class="hoc clear"> 
 
+        <div class="one_half">
+            <h6 class="heading">Redes Sociales</h6>
+            <ul class="nospace linklist">
+                <li><a href="Linkedin.com/in/jorge-fernandez-5b8042246/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/jorge1101" target="_blank">GitHub</a></li>
+                 <li><a href="mailto:jor.fernandezj@duocuc.cl">Enviame un Correo</a></li>
+            </ul>
+        </div>
+          <div class="hoc clear">
+        <div class="one_half">
+            <h6 class="heading">Certificaciones</h6>
+            <ul class="nospace linklist">
+                <li><a href="enlace-a-certificacion-jav" target="_blank">Certificación en Java</a></li>
+                <li><a href="enlace-a-certificacion-angular" target="_blank">Certificación en Angular</a></li>
+                <li><a href="enlace-a-certificacion-spring" target="_blank">Certificación en Spring Boot</a></li>
+            </ul>
+        </div>
+    </div>
     </footer>
   </div>
   
