--- a/index.html
+++ b/index.html
@@ -144,41 +144,15 @@
 
   <div class="wrapper row4">
 <footer id="footer" class="hoc clear"> 
-  <!-- ################################################################################################ -->
-  <div class="group btmspace-50">
-    <div class="one_quarter first">
-      <h6 class="heading">Redes Sociales</h6>
-      <ul class="nospace linklist">
-        <li><a href="https://www.linkedin.com/in/jorge-fernandez-5b8042246/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://github.com/jorge1101" target="_blank">GitHub</a></li>
-        <li><a href="mailto:jor.fernandezj@duocuc.cl">Enviar Correo</a></li>
-      </ul>
+    <div class="one_half">
+        <h6 class="heading">Redes Sociales</h6>
+        <ul class="nospace linklist">
+            <li><a href="https://www.linkedin.com/in/jorge-fernandez-5b8042246/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/jorge1101" target="_blank">GitHub</a></li>
+            <li><a href="mailto:jor.fernandezj@duocuc.cl">Enviame un Correo</a></li>
+        </ul>
     </div>
-    
-    <div class="one_quarter">
-      <h6 class="heading">Certificaciones</h6>
-      <ul class="nospace linklist">
-        <li><a href="enlace-a-certificacion-java" target="_blank">Certificación en Java</a></li>
-        <li><a href="enlace-a-certificacion-angular" target="_blank">Certificación en Angular</a></li>
-        <li><a href="enlace-a-certificacion-spring" target="_blank">Certificación en Spring Boot</a></li>
-      </ul>
-    </div>
-  </div>
-  <!-- ################################################################################################ -->
-  <hr class="btmspace-50">
-  <!-- ################################################################################################ -->
-  <nav>
-    <ul class="nospace">
-      <li><a href="index.html"><i class="fas fa-lg fa-home"></i></a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Cookies</a></li>
-      <li><a href="#">Disclaimer</a></li>
-    </ul>
-  </nav>
-  <!-- ################################################################################################ -->
+
 </footer>
 
 
