--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body id="top">
 
@@ -146,13 +147,12 @@
 <footer id="footer" class="hoc clear"> 
     <div class="one_half">
         <h6 class="heading">Redes Sociales</h6>
-        <ul class="nospace linklist">
-            <li><a href="https://www.linkedin.com/in/jorge-fernandez-5b8042246/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/jorge1101" target="_blank">GitHub</a></li>
-            <li><a href="mailto:jor.fernandezj@duocuc.cl">Enviame un Correo</a></li>
+        <ul class="nospace linklist" style="list-style-type: none; padding: 0; display: flex; gap: 10px;">
+            <li><a href="https://www.linkedin.com/in/jorge-fernandez-5b8042246/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="https://github.com/jorge1101" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a href="mailto:jor.fernandezj@duocuc.cl"><i class="fas fa-envelope"></i> Enviame un Correo</a></li>
         </ul>
     </div>
-
 </footer>
 
 
